available_course_api_completed